# nitrogen

./: .gitignore  Cargo.toml  README.md  release.toml
.github/: dependabot.yml
.github/workflows/: check.yml  pr-review.yml  release-candidate.yml  release.yml  test.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: commands.rs  idl.rs  instructions.rs  main.rs  types.rs
crates/cli/src/handlers/: parse.rs  process_pda_idl.rs
crates/cli/src/handlers/codama/: parse_codama.rs  processors.rs  types.rs  utils.rs
crates/cli/templates/: accounts_mod.askama  accounts_struct.askama  events_struct.askama  instructions_mod.askama  instructions_struct.askama  types_struct.askama
crates/instruction-builder/: Cargo.toml  README.md
crates/instruction-builder/src/: error.rs  instruction.rs  lib.rs  lookup.rs  transaction.rs
crates/instruction-builder/tests/: blocking.rs  integration.rs
encoders/circle-message-transmitter-v2-encoder/: Cargo.toml  README.md
encoders/circle-message-transmitter-v2-encoder/src/: helpers.rs  lib.rs
encoders/circle-message-transmitter-v2-encoder/src/accounts/: message_sent.rs  message_transmitter.rs  mod.rs  used_nonce.rs
encoders/circle-message-transmitter-v2-encoder/src/helpers/: receive_message_helpers.rs  reclaim_event_account_helpers.rs
encoders/circle-message-transmitter-v2-encoder/src/instructions/: accept_ownership.rs  attester_disabled_event.rs  attester_enabled_event.rs  attester_manager_updated_event.rs  disable_attester.rs  enable_attester.rs  initialize.rs  is_nonce_used.rs  max_message_body_size_updated_event.rs  message_received_event.rs  mod.rs  pause.rs  receive_message.rs  reclaim_event_account.rs  send_message.rs  set_max_message_body_size.rs  set_signature_threshold.rs  signature_threshold_updated_event.rs  transfer_ownership.rs  unpause.rs  unpause_event.rs  update_attester_manager.rs  update_pauser.rs
encoders/circle-message-transmitter-v2-encoder/src/types/: accept_ownership_params.rs  attester_disabled.rs  attester_enabled.rs  attester_manager_updated.rs  disable_attester_params.rs  enable_attester_params.rs  initialize_params.rs  max_message_body_size_updated.rs  message_received.rs  message_sent.rs  message_transmitter.rs  ownership_transfer_started.rs  ownership_transferred.rs  pause.rs  pause_params.rs  pauser_changed.rs  receive_message_params.rs  reclaim_event_account_params.rs  send_message_params.rs  set_max_message_body_size_params.rs  set_signature_threshold_params.rs  signature_threshold_updated.rs  transfer_ownership_params.rs  unpause_params.rs  update_attester_manager_params.rs  update_pauser_params.rs  used_nonce.rs
encoders/circle-token-messenger-minter-v2-encoder/: Cargo.toml  README.md
encoders/circle-token-messenger-minter-v2-encoder/src/: helpers.rs  lib.rs
encoders/circle-token-messenger-minter-v2-encoder/src/accounts/: denylisted_account.rs  local_token.rs  message_transmitter.rs  mod.rs  remote_token_messenger.rs  token_messenger.rs  token_minter.rs  token_pair.rs
encoders/circle-token-messenger-minter-v2-encoder/src/instructions/: accept_ownership.rs  add_local_token.rs  add_remote_token_messenger.rs  burn_token_custody.rs  denylist_account.rs  denylisted_event.rs  denylister_changed_event.rs  deposit_for_burn.rs  deposit_for_burn_event.rs  deposit_for_burn_with_hook.rs  fee_recipient_set_event.rs  handle_receive_finalized_message.rs  handle_receive_unfinalized_message.rs  initialize.rs  link_token_pair.rs  local_token_added_event.rs  local_token_removed_event.rs  min_fee_controller_set_event.rs  min_fee_set_event.rs  mint_and_withdraw_event.rs  mod.rs  ownership_transfer_started_event.rs  ownership_transferred_event.rs  pause.rs  pause_event.rs  pauser_changed_event.rs  remote_token_messenger_added_event.rs  remote_token_messenger_removed_event.rs  remove_local_token.rs  remove_remote_token_messenger.rs  set_burn_limit_per_message_event.rs  set_fee_recipient.rs  set_max_burn_amount_per_message.rs  set_min_fee.rs  set_min_fee_controller.rs  set_token_controller.rs  set_token_controller_event.rs  token_custody_burned_event.rs  token_pair_linked_event.rs  token_pair_unlinked_event.rs  (+7 more)
encoders/circle-token-messenger-minter-v2-encoder/src/types/: accept_ownership_params.rs  add_local_token_params.rs  add_remote_token_messenger_params.rs  burn_token_custody_params.rs  denylist_params.rs  denylisted.rs  denylisted_account.rs  denylister_changed.rs  deposit_for_burn.rs  deposit_for_burn_params.rs  deposit_for_burn_with_hook_params.rs  fee_recipient_set.rs  handle_receive_message_params.rs  initialize_params.rs  link_token_pair_params.rs  local_token.rs  local_token_added.rs  local_token_removed.rs  message_transmitter.rs  min_fee_controller_set.rs  min_fee_set.rs  mint_and_withdraw.rs  ownership_transfer_started.rs  ownership_transferred.rs  pauser_changed.rs  remote_token_messenger.rs  remote_token_messenger_added.rs  remote_token_messenger_removed.rs  remove_local_token_params.rs  remove_remote_token_messenger_params.rs  set_burn_limit_per_message.rs  set_fee_recipient_params.rs  set_max_burn_amount_per_message_params.rs  set_min_fee_controller_params.rs  set_min_fee_params.rs  set_token_controller.rs  set_token_controller_params.rs  token_custody_burned.rs  token_messenger.rs  token_minter.rs  (+10 more)
examples/circle-cctp/: Cargo.toml
examples/circle-cctp/src/: attestation.rs  command.rs  main.rs
scripts/: docsrs.sh  gen.sh  pre-commit  pre-commit.sh
