[workspace]
members = ["crates/*", "encoders/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/carteraMesh/nitrogen"

[workspace.lints.clippy]
collapsible_if = "allow"
vec_init_then_push = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
alloy-primitives  = "1"
anyhow = "1"
askama = "0.12"
base64 = "0.22"
bincode = "1"
bon = "3"
borsh = { version = "1" }
borsh-derive-internal = "0.10"
bs58 = { version = "0.5", default-features = false }
clap = { version = "4", features = ["derive"] }
dotenv = "0.15.0"
flate2 = "1"
heck = "0.5"
hex = "0.4"
log = "0.4"
nitrogen-circle-message-transmitter-v2-encoder  = { path = "./encoders/circle-message-transmitter-v2-encoder", version = "0.1.0" }
nitrogen-circle-token-messenger-minter-v2-encoder = { path = "./encoders/circle-token-messenger-minter-v2-encoder", version = "0.1.0" }
nitrogen-instruction-builder = { path = "./crates/instruction-builder", version = "0.1.0" }
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
solana-client = "2"
solana-commitment-config = "2"
solana-instruction = { version = "2", default-features = false, features = ["borsh", "std"] }
solana-pubkey = { version = "2", features = ["serde", "borsh", "curve25519"] }
solana-rpc-client = { version = "2" }
solana-rpc-client-api = { version = "2" }
solana-signer = { version = "2" }
solana-signature = { version = "2" }
solana-transaction = { version = "2" }
solana-keypair = "2"
spl-associated-token-account = "7"
spl-memo = "6"
spl-token = { version = "7" }
syn = { version = "1", features = ["full"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", features = ["rt", "time", "signal", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
