[workspace]
members = ["crates/*", "encoders/*" , "examples/*" ]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/carteraMesh/nitrogen"

[workspace.lints.clippy]
collapsible_if = "allow"
vec_init_then_push = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
alloy-primitives  = "1"
anyhow = "1"
askama = "0.12"
async-trait = "0.1"
base64 = "0.22"
bincode = "1"
bon = "3"
borsh = { version = "1" }
borsh-derive-internal = "0.10"
bs58 = { version = "0.5", default-features = false }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
flate2 = "1"
heck = "0.5"
hex = "0.4"
humantime = "2"
log = "0.4"
nitrogen-circle-message-transmitter-v2-encoder  = { path = "./encoders/circle-message-transmitter-v2-encoder", version = "0.1.5" }
nitrogen-circle-token-messenger-minter-v2-encoder = { path = "./encoders/circle-token-messenger-minter-v2-encoder", version = "0.1.1" }
nitrogen-instruction-builder = { path = "./crates/instruction-builder", version = "0.1.2" }
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
solana-account = { version = "3.1.0" , features = ["bincode"] }
solana-account-decoder = "3"
solana-account-decoder-client-types = "3"
solana-address-lookup-table-interface = { version = "3", features = [
    "bincode",
    "bytemuck",
] }
solana-compute-budget-interface = { version = "3" }
solana-client = "3"
solana-commitment-config = "3"
solana-hash = "3"
solana-instruction = { version = "3", default-features = false, features = ["borsh", "std"] }
solana-message = { version = "3" }
solana-pubkey = { version = "3", features = ["serde", "borsh", "curve25519"] }
solana-rpc-client = { version = "3" }
solana-rpc-client-api = { version = "3" }
solana-rpc-client-types = { version = "3" }
solana-signer = { version = "3" }
solana-signature = { version = "3" }
solana-system-interface = { version = "2" , features = ["bincode"] }
solana-transaction = { version = "3" }
solana-keypair = "3"
spl-associated-token-account = "8"
spl-memo-interface = { version = "2" }
spl-token = { version = "9" }
syn = { version = "1", features = ["full"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", features = ["rt", "time", "signal", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
