[package]
name = "nitrogen-instruction-builder"
version = "0.1.0"
edition = { workspace = true }
description = "Solana Instruction builder for nitrogen framework/encoders"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "idl"]
categories = ["encoding"]

[features]
default = []
blocking = []

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
borsh = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-address-lookup-table-interface = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
spl-memo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
dotenvy = "0.15.7"
solana-keypair = { version = "2" }
spl-memo = { version = "6", features = ["no-entrypoint"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
