[package]
name = "nitrogen-instruction-builder"
version = "0.1.1"
edition = { workspace = true }
description = "Solana instruction builder for nitrogen IDL encoder framework"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "idl"]
categories = ["encoding"]

[features]
default = []

[dependencies]
bon = { workspace = true }
borsh = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
spl-memo = { workspace = true }

[lints]
workspace = true
