[package]
name = "nitrogen-circle-message-transmitter-v2-encoder"
version = "0.1.0"
edition = { workspace = true }
description = "nitrogen-circle-message-transmitter-v2-encoder"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "idl"]
categories = ["encoding"]

[dependencies]
bon = { workspace = true }
borsh = { workspace = true }
nitrogen-instruction-builder = { workspace = true }
serde = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }


[lints]
workspace = true
