[package]
name = "nitrogen-circle-message-transmitter-v2-encoder"
version = "0.1.1-rc.1"
edition = { workspace = true }
description = "nitrogen-circle-message-transmitter-v2-encoder"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "idl"]
categories = ["encoding"]

[dependencies]
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bon = { workspace = true }
borsh = { workspace = true }
humantime = { workspace = true }
nitrogen-instruction-builder = { workspace = true }
serde = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-client = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
