[package]
name = "circle-cctp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
nitrogen-circle-message-transmitter-v2-encoder = { workspace = true }
nitrogen-circle-token-messenger-minter-v2-encoder = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-commitment-config = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
soly = { git = "https://github.com/CarteraMesh/soly.git", branch = "main" }
spl-memo = { workspace = true }
spl-token = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
